exports[`test A standard order 1`] = `
<li
  className="fhXzbr">
  <span
    className="kwWJud">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj">
    MOOIE 456 TEST
  </span>
  <span
    className="bSJakI">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        1
        x 
        Name of the product
      </span>
      <span
        className="gLZwgs">
        2
        x 
        Another product
      </span>
    </span>
  </span>
  <span
    className="jbrwcx">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="dEBTMs">
    completed
  </span>
  <span
    className="kZrKRI">
    <a
      aria-label="Download invoice"
      className="gjWJrZ"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink">
      <span
        className="screen-reader-text">
        Invoice
      </span>
    </a>
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="fhXzbr">
  <span
    className="kwWJud">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj">
    MOOIE 456 TEST
  </span>
  <span
    className="bSJakI">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        1
        x 
        Name of the product
      </span>
      <span
        className="gLZwgs">
        2
        x 
        Another product
      </span>
    </span>
  </span>
  <span
    className="jbrwcx">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="dEBTMs">
    pending
  </span>
  <span
    className="kZrKRI">
    <button
      aria-label="Download invoice"
      className="hlkIIS fiWVzZ"
      disabled="disabled"
      to="http://somelink">
      <span
        className="screen-reader-text">
        Invoice
      </span>
    </button>
  </span>
</li>
`;
